Added: paths replace in users management api
